# sexp-grammar

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  Test.hs  cabal.project  default.nix  sexp-grammar.cabal  shell.nix  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml  stack.yaml
.github/workflows/: build-cabal.yml  build-nix.yml  build.yml  haskell-ci.yml
bench/: Main.hs
examples/: Expr.hs  ExprTH.hs  ExprTH2.hs  Lang.hs  Misc.hs
invertible-grammar/: README.md  invertible-grammar.cabal
invertible-grammar/src/Control/Monad/: ContextError.hs
invertible-grammar/src/Data/: InvertibleGrammar.hs
invertible-grammar/src/Data/InvertibleGrammar/: Base.hs  Combinators.hs  Generic.hs  Monad.hs  TH.hs
sexp-grammar/: CHANGELOG.md  README.md  hackage-docs.sh  sexp-grammar.cabal
sexp-grammar/src/Language/: Sexp.hs  SexpGrammar.hs
sexp-grammar/src/Language/Sexp/: Encode.hs  Lexer.x  Located.hs  Parser.y  Pretty.hs  Token.hs  Types.hs
sexp-grammar/src/Language/SexpGrammar/: Base.hs  Class.hs  Generic.hs
sexp-grammar/test/: Main.hs
src/Control/Monad/: ContextError.hs
src/Data/: Invertible.hs  InvertibleGrammar.hs  PartialIso.hs  StackPrism.hs
src/Data/InvertibleGrammar/: Base.hs  Combinators.hs  Generic.hs  Monad.hs  TH.hs
src/Data/StackPrism/: Extra.hs  ReverseGeneric.hs  ReverseTH.hs
src/Language/: Sexp.hs  SexpGrammar.hs
src/Language/Sexp/: Encode.hs  Lexer.x  LexerInterface.hs  Parser.y  Pretty.hs  Token.hs  Types.hs  Utils.hs
src/Language/SexpGrammar/: Base.hs  Class.hs  Combinators.hs  Generic.hs  Grammar.hs  Parser.hs  TH.hs
test/: Main.hs
