name:                sexp-grammar
version:             1.2.2
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka, Sergey Vinokurov
maintainer:          Eugene Smolanka <esmolanka@gmail.com>, Sergey Vinokurov <serg.foo@gmail.com>
homepage:            https://github.com/esmolanka/sexp-grammar
category:            Language
build-type:          Simple
extra-source-files:  README.md
                     examples/Expr.hs
                     examples/Misc.hs
cabal-version:       >=1.10
synopsis:
  Invertible parsers for S-expressions
description:
  Invertible grammar combinators for serializing and deserializing from S-expessions
tested-with:   GHC == 7.8.3, GHC == 7.10.3

source-repository head
  type: git
  location: https://github.com/esmolanka/sexp-grammar

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    Language.Sexp
    Language.Sexp.Encode
    Language.Sexp.Pretty
    Language.Sexp.Utils
    Language.SexpGrammar
    Language.SexpGrammar.TH
    Language.SexpGrammar.Generic

  other-modules:
    Data.InvertibleGrammar
    Data.InvertibleGrammar.Monad
    Data.InvertibleGrammar.Generic
    Data.InvertibleGrammar.TH
    Control.Monad.ContextError
    Language.Sexp.LexerInterface
    Language.Sexp.Lexer
    Language.Sexp.Parser
    Language.Sexp.Token
    Language.Sexp.Types
    Language.SexpGrammar.Base
    Language.SexpGrammar.Class
    Language.SexpGrammar.Combinators

  build-depends:
      array
    , base >=4.7 && <5
    , bytestring
    , containers
    , mtl >=2.1
    , profunctors
    , scientific
    , semigroups
    , split
    , tagged
    , template-haskell
    , transformers
    , text
    , wl-pprint-text

  build-tools: alex, happy

test-suite sexp-grammar-test
  type:              exitcode-stdio-1.0
  build-depends:
      QuickCheck
    , base
    , scientific
    , semigroups
    , sexp-grammar
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
  main-is:           Main.hs
  hs-source-dirs:    test
  default-language:  Haskell2010

benchmark sexp-grammar-bench
  type:              exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , criterion
    , scientific
    , semigroups
    , sexp-grammar
    , text
  main-is:           Main.hs
  hs-source-dirs:    bench
  default-language:  Haskell2010
