name:                sexp-grammar
version:             1.3.0
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka, Sergey Vinokurov
maintainer:          Eugene Smolanka <esmolanka@gmail.com>, Sergey Vinokurov <serg.foo@gmail.com>
homepage:            https://github.com/esmolanka/sexp-grammar
category:            Language
build-type:          Simple
extra-source-files:  README.md
                     examples/Expr.hs
                     examples/Misc.hs
cabal-version:       >=1.10
synopsis:
  Invertible parsers for S-expressions
description:
  Invertible grammar combinators for serializing and deserializing from S-expessions
tested-with:   GHC == 7.8.3, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository head
  type: git
  location: https://github.com/esmolanka/sexp-grammar

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    Data.InvertibleGrammar
    Language.Sexp
    Language.Sexp.Encode
    Language.Sexp.Pretty
    Language.Sexp.Utils
    Language.SexpGrammar
    Language.SexpGrammar.TH
    Language.SexpGrammar.Generic

  other-modules:
    Data.InvertibleGrammar.Monad
    Data.InvertibleGrammar.Generic
    Data.InvertibleGrammar.TH
    Control.Monad.ContextError
    Language.Sexp.LexerInterface
    Language.Sexp.Lexer
    Language.Sexp.Parser
    Language.Sexp.Token
    Language.Sexp.Types
    Language.SexpGrammar.Base
    Language.SexpGrammar.Class

  build-depends:
      array             >=0.5   && <0.6
    , base              >=4.7   && <5.0
    , bytestring        >=0.10  && <0.11
    , bifunctors        >=4.2   && <5.6
    , containers        >=0.5.5 && <0.6
    , mtl               >=2.1   && <2.3
    , prettyprinter     >=1     && <1.3
    , profunctors       >=4.4   && <5.3
    , scientific        >=0.3.3 && <0.4
    , semigroups        >=0.16  && <0.19
    , split             >=0.2   && <0.3
    , tagged            >=0.7   && <0.9
    , template-haskell  >=2.9   && <2.14
    , transformers      >=0.3   && <0.6
    , text              >=1.2   && <1.3

  build-tools: alex, happy

test-suite sexp-grammar-test
  type:              exitcode-stdio-1.0
  build-depends:
      QuickCheck
    , base
    , scientific
    , semigroups
    , containers
    , sexp-grammar
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
  main-is:           Main.hs
  hs-source-dirs:    test
  default-language:  Haskell2010

benchmark sexp-grammar-bench
  type:              exitcode-stdio-1.0
  build-depends:
      base
    , bytestring
    , containers
    , criterion
    , deepseq
    , scientific
    , semigroups
    , text
    , sexp-grammar
  main-is:           Main.hs
  hs-source-dirs:    bench
  default-language:  Haskell2010
