name:                invertible-grammar
version:             0.1.3.5
license:             BSD3
license-file:        LICENSE
author:              Yevhen Smolanka, Sergey Vinokurov
maintainer:          Yevhen Smolanka <ys@polymorphic.me>
homepage:            https://github.com/esmolanka/invertible-grammar
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
synopsis:
  Invertible parsing combinators framework
description:
  Grammar combinator framework to build invertible parsing libraries
  for concrete syntax.
tested-with:   GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.4, GHC == 8.10.7, GHC == 9.0.1, GHC == 9.2.5

source-repository head
  type: git
  location: https://github.com/esmolanka/sexp-grammar

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    Data.InvertibleGrammar
    Data.InvertibleGrammar.Base
    Data.InvertibleGrammar.Combinators
    Data.InvertibleGrammar.Generic
    Data.InvertibleGrammar.TH

  other-modules:
    Control.Monad.ContextError
    Data.InvertibleGrammar.Monad

  build-depends:
      base              >=4.11  && <5.0
    , bifunctors        >=4.2   && <6.0
    , containers        >=0.5.5 && <0.8
    , mtl               >=2.2   && <2.4
    , prettyprinter     >=1.7   && <2.0
    , profunctors       >=4.4   && <5.7
    , semigroups        >=0.16  && <0.21
    , tagged            >=0.7   && <0.9
    , template-haskell  >=2.9   && <2.22
    , transformers      >=0.3   && <0.7
    , text              >=1.2   && <1.3 || >=2.0 && <2.2
